# prism-vsrg

./: .gitignore  Cargo.toml  LICENSE  README.md  errors.txt  main.db  maps.db  settings.toml  warnings.txt  warnings2.txt
.wiki/: Architecture.md  Contributing.md  Getting-Started.md  Home.md  Keybinds.md  Skinning.md
apps/game/: Cargo.toml
apps/game/src/: logic.rs  main.rs
apps/game/src/audio_sys/: mod.rs  worker.rs
apps/game/src/graphics/: context.rs  mod.rs  pipelines.rs  primitives.rs  theme.rs
apps/game/src/graphics/assets/: mod.rs  skin_assets.rs  texture_cache.rs
apps/game/src/graphics/draw/: background.rs  gameplay.rs  hud.rs  mod.rs  progress.rs
apps/game/src/graphics/renderer/: editor.rs  gameplay.rs  main_menu.rs  mod.rs  offscreen.rs  result.rs  song_select.rs
apps/game/src/input/: events.rs  manager.rs  mod.rs
apps/game/src/models/: settings.rs
apps/game/src/render/: app.rs  draw.rs  mock_data.rs  mod.rs  resources.rs  utils.rs
apps/game/src/shaders/: constants.rs  cube_shader.wgsl  particle_shader.wgsl  sprite.wgsl
apps/game/src/shared/: snapshot.rs
apps/game/src/state/: mod.rs  mods.rs  traits.rs
apps/game/src/state/game/: actions.rs  input.rs  mod.rs  notes.rs  practice.rs  snapshot.rs
apps/game/src/state/global/: helpers.rs  mod.rs
apps/game/src/state/global/actions/: game.rs  menu.rs  result.rs
apps/game/src/state/menu/: chart_cache.rs  difficulty_cache.rs  mod.rs  rate_cache.rs
apps/game/src/state/result/: mod.rs
apps/game/src/ui/: mod.rs
apps/game/src/ui/common/: cube.rs  mod.rs  particles.rs
apps/game/src/ui/gameplay/: column.rs  hud.rs  mod.rs  playfield.rs
apps/game/src/ui/page/: main_menu.rs  mod.rs  song_select.rs
apps/game/src/ui/song_select/: beatmap_info.rs  difficulty_card.rs  difficulty_utils.rs  hexagon_chart.rs  leaderboard.rs  leaderboard_card.rs  mod.rs  search_panel.rs  song_card.rs  song_list.rs
apps/game/src/views/: context.rs  gameplay.rs
apps/game/src/views/components/editor/: browser.rs  layout.rs  viewport.rs
apps/game/src/views/components/editor/inspector/: columns.rs  general.rs  hud.rs  judgement.rs  menus.rs  mod.rs  playfield.rs
apps/game/src/views/components/gameplay/: hit_bar.rs  judgement.rs  playfield.rs
apps/game/src/views/components/menu/: main_menu.rs  mod.rs
apps/game/src/views/components/menu/result_screen/: graphs.rs  mod.rs
lib/audio/: Cargo.toml
lib/audio/src/: lib.rs  thread.rs
lib/chart/: Cargo.toml
lib/chart/src/: converter.rs  lib.rs
lib/chart/src/difficulty/: mod.rs
lib/database/: Cargo.toml
lib/database/src/: connection.rs  lib.rs  manager.rs  models.rs  query.rs  replay_storage.rs  scanner.rs
lib/database/src/migrations/: 002_create_beatmap.sql  003_create_replay.sql
lib/engine/: Cargo.toml
lib/engine/src/: hit_window.rs  hit_window_mode.rs  lib.rs  note.rs
lib/replay/: Cargo.toml
lib/replay/src/: lib.rs  storage.rs
lib/replay/src/simulation/: mod.rs
lib/replay/src/types/: input.rs  mod.rs  replay.rs  result.rs
lib/settings/: Cargo.toml
lib/settings/src/: aspect_ratio.rs  hit_window_mode.rs  keybinds.rs  lib.rs  settings.rs
lib/skin/: Cargo.toml
skins/default/: colors.toml  skin_10k.toml  skin_4k.toml  skin_5k.toml  skin_6k.toml  skin_7k.toml  skin_8k.toml  skin_9k.toml
skins/default/conf/: 5k.toml  6k.toml  8k.toml  9k.toml  gameplay.toml
songs/demo/: demo.osu
songs/galope stp/: antiPLUR - Speed of Link (Osef) [Galope fils de pute].osu
songs/toodeep/: Envy - IN TOO DEEP (Hazalax) [Eternal+].osu
src/: app.rs  background_shader.wgsl  engine.rs  main.rs  menu.rs  playfield.rs  quad_shader.wgsl  shader.wgs1  skin.rs
src/components/: accuracy.rs  card.rs  combo.rs  hit_bar.rs  judgement.rs  judgements.rs  map_list.rs  mod.rs  playfield.rs  score.rs  song_selection_menu.rs
src/core/input/: actions.rs  bindings.rs  mod.rs
src/database/: connection.rs  manager.rs  mod.rs  models.rs  query.rs  scanner.rs
src/database/migrations/: 001_create_beatmapset.sql  002_create_beatmap.sql  003_create_replay.sql  005_create_beatmap_rating.sql
src/difficulty/: calculator.rs  etterna.rs  mod.rs  osu.rs
src/input/: events.rs  keycode.rs  manager.rs  mod.rs
src/logic/: audio.rs  audio_thread.rs  engine.rs  mod.rs  state.rs
src/models/: menu.rs  mod.rs  replay.rs  search.rs  settings.rs  skin.rs  stats.rs
src/render/: app.rs  context.rs  draw.rs  mock_data.rs  mod.rs  renderer.rs  resources.rs  ui.rs  utils.rs
src/renderer/: core.rs  gameplay.rs  menu.rs  mod.rs  pipeline.rs  text.rs  texture.rs
src/shared/: messages.rs  mod.rs  snapshot.rs
src/state/: global.rs  mod.rs  traits.rs
src/states/: editor.rs  menu.rs  mod.rs  play.rs  result.rs
src/system/: bus.rs
src/views/: context.rs  gameplay.rs  menu.rs  mod.rs  result.rs  settings.rs
(+94 files in other folders)
