[package]
name = "game"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prism - A vertical scrolling rhythm game"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
# Local crates
engine.workspace = true
replay.workspace = true
chart.workspace = true
skin.workspace = true
database.workspace = true
settings.workspace = true

# Core
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
log.workspace = true
env_logger.workspace = true

# Async
tokio.workspace = true
crossbeam-channel.workspace = true

# Audio
rodio.workspace = true

# Serialization
rkyv.workspace = true
zstd.workspace = true

# Chart parsing
rhythm-open-exchange.workspace = true
rosu-map.workspace = true
rosu-pp.workspace = true
minacalc-rs.workspace = true

# Graphics
wgpu.workspace = true
wgpu_text.workspace = true
winit.workspace = true
pollster.workspace = true
image.workspace = true
bytemuck.workspace = true

# UI
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_extras.workspace = true
rfd.workspace = true

# Utilities
rand.workspace = true
md5.workspace = true
ordered-float.workspace = true
