[package]
name = "database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database layer for Prism rhythm game"

[dependencies]
# Local crates
engine.workspace = true
replay.workspace = true
chart.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
zstd.workspace = true

# Chart parsing
rhythm-open-exchange.workspace = true


# Async
tokio.workspace = true
crossbeam-channel.workspace = true

# Utilities
log.workspace = true
md5.workspace = true
